plugins {
    id'application'
    id'com.github.johnrengelman.shadow' version '5.2.0'
}

mainClassName = 'hyphenated.Rotobot'

group 'hyphenated'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = 11

repositories {
    mavenCentral()
    maven {
        url "https://m2.dv8tion.net/releases"
    }
}

def jdaVersion = '5.0.0-alpha.18'

dependencies {
    implementation "net.dv8tion:JDA:$jdaVersion"
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'io.github.cdimascio:dotenv-java:2.2.4'
    implementation 'com.google.code.gson:gson:2.9.1'
    implementation 'net.gcardone.junidecode:junidecode:0.4.1'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'info.debatty:java-string-similarity:2.0.0'

    // sheets api stuff
    implementation 'com.google.api-client:google-api-client:2.0.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220620-2.0.0'
    implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'




    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
}


compileJava.options.encoding = 'UTF-8'